<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CriarContaActivity"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/nome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/nome"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/senha"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/cadastrar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"/>



</LinearLayout>